objects/et4ae5__Campaign_Member_Configuration__c.object
<CustomObject>
    <description>Contains the fields used to determine the configuration for Campaign Member tracking and updates.</description>
    <fields>
        <fullName>et4ae5__CampaignMemberIntegrationEnabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If this box is checked, Campaign Member Status or Activity Field will be updated depending on the value of  the UpdateStatusOrActivity field.</description>
        <inlineHelpText>Si esta casilla está marcada, el campo Estado de los miembros de la campaña o Actividad se actualizará dependiendo del valor del campo UpdateStatusOrActivity.</inlineHelpText>
        <label>CampaignMemberConnectorEnabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>et4ae5__UpdateStatusOrActivity__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines if Campaign Member&apos;s Activity field (box is not checked) or the Status field (box is checked) will be updated if the Campaign Member is enabled.</description>
        <label>UpdateStatusOrActivity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>et4ae5__mapClickedTo__c</fullName>
        <description>This is the value that will appear in status or activity when a clicked event occurs.</description>
        <label>mapClickedTo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__mapHardBounceTo__c</fullName>
        <label>mapHardBounceTo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__mapOpenedTo__c</fullName>
        <label>mapOpenedTo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__mapSentTo__c</fullName>
        <label>mapSentTo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__mapSoftBounceTo__c</fullName>
        <label>mapSoftBounceTo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__mapUnsubscribedTo__c</fullName>
        <label>mapUnsubscribedTo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Campaign Member Configuration</label>
    <nameField>
        <label>Campaign Member Configuration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Campaign Member Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>